# archlinux-pyinfra

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
archlinux_pyinfra/: deploy.py  desktop_gnome.py  desktop_xfce.py  mime.py
archlinux_pyinfra/archive/: desktop_xfce.py
archlinux_pyinfra/wayland/: base.py  labwc.py
src/: deploy.py  mime.py
src/archive/: desktop_gnome.py  desktop_xfce.py
src/wayland/: base.py  labwc.py
