[project]
name = "archlinux-pyinfra"
version = "0.1.0"
description = "Arch Linux with pyinfra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyinfra==3.5.1"]

[dependency-groups]
dev = ["mypy[faster-cache]==1.19.1", "pyright==1.1.407", "ruff==0.14.9"]

[tool.ruff]
line-length = 88
