[project]
name = "archlinux-pyinfra"
version = "0.1.0"
description = "Arch Linux with pyinfra"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "zsxoff" }]
dependencies = ["pyinfra==3.6.0"]

[dependency-groups]
dev = ["mypy[faster-cache]==1.19.1", "pyright==1.1.408", "ruff==0.14.14"]

[tool.flake8]
max-line-length = 88

[tool.mypy]
strict = true

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]
